@@ -2,56 +2,56 @@ package com.boulder.cisd.auth;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 
-public class PasswordStorage {
+public class PasswordStorage
+{
 
     @SuppressWarnings("serial")
     static public class InvalidHashException extends Exception {
-        public InvalidHashException(String message) {
+        InvalidHashException(String message) {
             super(message);
         }
-        public InvalidHashException(String message, Throwable source) {
+        InvalidHashException(String message, Throwable source) {
             super(message, source);
         }
     }
 
     @SuppressWarnings("serial")
     static public class CannotPerformOperationException extends Exception {
-        public CannotPerformOperationException(String message) {
+        CannotPerformOperationException(String message) {
             super(message);
         }
-        public CannotPerformOperationException(String message, Throwable source) {
+        CannotPerformOperationException(String message, Throwable source) {
             super(message, source);
         }
     }
 
-    public static final String PBKDF2_ALGORITHM = "PBKDF2WithHmacSHA1";
+    private static final String PBKDF2_ALGORITHM = "PBKDF2WithHmacSHA1";
 
     // These constants may be changed without breaking existing hashes.
-    public static final int SALT_BYTE_SIZE = 24;
-    public static final int HASH_BYTE_SIZE = 18;
-    public static final int PBKDF2_ITERATIONS = 64000;
+    private static final int SALT_BYTE_SIZE = 24;
+    private static final int HASH_BYTE_SIZE = 18;
+    private static final int PBKDF2_ITERATIONS = 64000;
 
     // These constants define the encoding and may not be changed.
-    public static final int HASH_SECTIONS = 5;
-    public static final int HASH_ALGORITHM_INDEX = 0;
-    public static final int ITERATION_INDEX = 1;
-    public static final int HASH_SIZE_INDEX = 2;
-    public static final int SALT_INDEX = 3;
-    public static final int PBKDF2_INDEX = 4;
+    private static final int HASH_SECTIONS = 5;
+    private static final int HASH_ALGORITHM_INDEX = 0;
+    private static final int ITERATION_INDEX = 1;
+    private static final int HASH_SIZE_INDEX = 2;
+    private static final int SALT_INDEX = 3;
+    private static final int PBKDF2_INDEX = 4;
 
     public static String createHash(String password)
         throws CannotPerformOperationException
     {
         return createHash(password.toCharArray());
-        
     }
 
-    public static String createHash(char[] password)
+    private static String createHash(char[] password)
         throws CannotPerformOperationException
     {
         // Generate a random salt
@@ -64,14 +64,13 @@ public class PasswordStorage {
         int hashSize = hash.length;
 
         // format: algorithm:iterations:hashSize:salt:hash
-        String parts = "sha1:" +
+        return "sha1:" +
             PBKDF2_ITERATIONS +
             ":" + hashSize +
             ":" +
             toBase64(salt) +
             ":" +
             toBase64(hash);
-        return parts;
     }
 
     public static boolean verifyPassword(String password, String correctHash)
@@ -98,7 +97,7 @@ public class PasswordStorage {
             );
         }
 
-        int iterations = 0;
+        int iterations;
         try {
             iterations = Integer.parseInt(params[ITERATION_INDEX]);
         } catch (NumberFormatException ex) {
@@ -115,7 +114,7 @@ public class PasswordStorage {
         }
 
 
-        byte[] salt = null;
+        byte[] salt;
         try {
             salt = fromBase64(params[SALT_INDEX]);
         } catch (IllegalArgumentException ex) {
@@ -125,7 +124,7 @@ public class PasswordStorage {
             );
         }
 
-        byte[] hash = null;
+        byte[] hash;
         try {
             hash = fromBase64(params[PBKDF2_INDEX]);
         } catch (IllegalArgumentException ex) {
@@ -136,7 +135,7 @@ public class PasswordStorage {
         }
 
 
-        int storedHashSize = 0;
+        int storedHashSize;
         try {
             storedHashSize = Integer.parseInt(params[HASH_SIZE_INDEX]);
         } catch (NumberFormatException ex) {
@@ -152,7 +151,7 @@ public class PasswordStorage {
             );
         }
 
-        // Compute the hash of the provided password, using the same salt, 
+        // Compute the hash of the provided password, using the same salt,
         // iteration count, and hash length
         byte[] testHash = pbkdf2(password, salt, iterations, hash.length);
         // Compare the hashes in constant time. The password is correct if
@@ -191,12 +190,12 @@ public class PasswordStorage {
     private static byte[] fromBase64(String hex)
         throws IllegalArgumentException
     {
-        return DatatypeConverter.parseBase64Binary(hex);
+        return Base64.getDecoder().decode(hex);
     }
 
     private static String toBase64(byte[] array)
     {
-        return DatatypeConverter.printBase64Binary(array);
+        return Base64.getEncoder().encodeToString(array);
     }
 
 }
